--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <HTML lang="en">
     <HEAD>
-        <TITLE>{{ _('home_title') }}</TITLE>
+        <TITLE>Welcome to Holberton</TITLE>
     </HEAD>
     <BODY>
-        <H1>{{ _('home_header') }</H1>
+        <H1>Hello world</H1>
     </BODY>
 </HTML>
