--- a/0x02-i18n/templates/5-index.html
+++ b/0x02-i18n/templates/5-index.html
@@ -5,11 +5,12 @@
     </HEAD>
     <BODY>
         <H1>{{ gettext('home_header') }}</H1>
-
-        <H2>{% if not g.user %}
-                {{ gettext('logged_in_as') }}
+        {% if g.user %}
+        <p>
+                {{ gettext('logged_in_as', username=g.user['name']) }}
             {% else %}
                 {{ gettext('not_logged_in') }}
-            {% endif %}</H2>
+        </p>
+        {% endif %}
     </BODY>
 </HTML>
