--- a/0x02-i18n/templates/5-index.html
+++ b/0x02-i18n/templates/5-index.html
@@ -6,11 +6,9 @@
     <BODY>
         <H1>{{ gettext('home_header') }}</H1>
         {% if g.user %}
-        <p>
-                {{ gettext('logged_in_as', username=g.user['name']) }}
-            {% else %}
-                {{ gettext('not_logged_in') }}
-        </p>
+        <p>{{ gettext('logged_in_as', username=g.user['name']) }}</p>
+        {% else %}
+        <p>{{ gettext('not_logged_in') }}</p>
         {% endif %}
     </BODY>
 </HTML>
